<resources>
    <string name="app_name">uDrive</string>
    <string name="btn_guida_name">Comincia a guidare!</string>
    <string name="btn_home_name">Torna alla home</string>
    <string name="direction_image">Direction image</string>
    <string name="percentage_value">Percentage value</string>
    <string name="left_turn">Left turn</string>
    <string name="straight_forward">Straight forward</string>
    <string name="right_turn">Right turn</string>
    <string name="backward">Backward</string>
    <string name="steering_wheel">Steering Wheel</string>
    <string name="racing_cars">Racing cars</string>
    <string name="traffic">Traffic</string>
    <string name="car_road">Car road</string>
    <string name="driving">Driving</string>
    <string name="textview">TextView</string>
    <string name="thumbs_up">Thumbs up</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset Storage File</string>
    <string name="vertical_motion">Vertical Motion</string>
    <string name="secondrow">secondRow</string>
    <string name="firstrow">firstRow</string>
    <string name="popup">Sei sicuro di voler uscire?</string>
    <string name="si">Sì</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="save">Salva le modifiche</string>
    <string name="min_value_x">Modifica la soglia minima per x:</string>
    <string name="min_value_y">Modifica la soglia minima per y:</string>
    <string name="min_value_z">Modifica la soglia minima per z:</string>
    <string name="max_value">Modifica la soglia massima:</string>
</resources>
