<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:dividerHeight="5dp"
    android:layout_marginTop="10dp">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/firstrow">

        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/direction_image" />

        <TextView
            android:id="@+id/list_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/percentage_value"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:visibility="visible" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/secondrow">

        <ImageView
            android:id="@+id/list_item_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/direction_image" />

        <TextView
            android:id="@+id/list_item_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/percentage_value"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:visibility="visible" />

    </TableRow>
</TableLayout>