<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityStyle"
    android:background="@color/backgroundColorFrame">

    <Button
        android:id="@+id/btn_home"
        style="@style/buttonStyle"
        android:onClick="changeActivity"
        android:text="@string/btn_home_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_thumbs_up"
        style="@style/imageStyle"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/thumbs_up"
        app:layout_constraintBottom_toTopOf="@+id/btn_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_thumbs_up" />

    <TextView
        android:id="@+id/txt_results"
        style="@style/textStyle"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/btn_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_thumbs_up" />

</androidx.constraintlayout.widget.ConstraintLayout>